fix empty player message alignment

--- a/src/components/PlayerMobile/styles.module.scss
+++ b/src/components/PlayerMobile/styles.module.scss
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  margin-top: 1.3rem;
+  margin-top: 0.75rem;
 }
 
 .player_container {
